docs: codify naming/import code conventions and apply to PgVectorStoreAdapterTest